fix: apply Guardian compliance fixes (14 issues addressed)